# django_ModelViewSet

./: .gitignore  README.md  pyproject.toml
dashboard/: models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_userdashboard_delete_dashboard.py
myproject/: settings.py  urls.py
